@@ -1,6 +1,8 @@
 Revision history for App-wsgetmail
 
 0.07    ??/??/??
+        * Add documentation about error messages, warnings, and
+          diagnosing problems with processing.
         * Count and report messages with errors in post-fetch processing
         * Upgrade failure to fetch folder details to a fatal error
           from a warning and successful exit code.
